Just make sure the static positioning fix for vertical alignment is known

--- a/templates/2k11/admin/style.css
+++ b/templates/2k11/admin/style.css
@@ -1634,6 +1634,7 @@ summary {
 
 .pluginmanager_container .plugin_data .perm_name {
     left: 1.25em;
+    vertical-align: text-top; /* see position: static */
 }
 .plugin_data.open .block_level, /*IE*/
 .plugin_data[open=""] .block_level,
